# sprint-pulse

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Containerfile  LICENSE  Makefile  README.md  SECURITY.md  build_report.py  migrate_yaml_to_sqlite.py  pyproject.toml  requirements-dev.txt  requirements-server.txt  requirements.txt
.claude/skills/maintain-time-off-report/: SKILL.md
.claude/skills/refresh-sprint-metrics/: SKILL.md
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-05-14-yaml-data-refactor.md  2026-06-02-individual-time-off-calendar.md  2026-06-07-decouple-jira-optional.md  2026-06-07-generic-configurable.md  2026-06-10-departed-members.md  2026-06-13-skip-closed-archived-sync.md
docs/superpowers/specs/: 2026-05-14-yaml-data-refactor-design.md  2026-06-02-individual-time-off-calendar-design.md  2026-06-02-uv-native-packaging-design.md  2026-06-07-decouple-jira-optional-design.md  2026-06-07-generic-configurable-design.md  2026-06-10-departed-members-design.md  2026-06-13-skip-closed-archived-sync-design.md
examples/: config.yaml
examples/sprints/: 2026-16.yaml  2026-18.yaml  2026-20.yaml
packaging/: sprint_pulse.spec
scripts/: migrate_excluded.py
sprint_pulse/: config.py  desktop.py  errors.py  jira.py  migrate.py  render.py  sprints.py  types_defaults.py
sprint_pulse/db/: __init__.py  engine.py  models.py
sprint_pulse/services/: __init__.py  config_service.py  jira_service.py  mock_jira.py  refresh.py  secrets.py  sprint_service.py  time_off_service.py  type_service.py
sprint_pulse/web/: __init__.py  __main__.py  app.py  deps.py  nav.py  paths.py  scheduler.py
sprint_pulse/web/routers/: config_page.py  dashboard.py  members.py  scheduler.py  setup.py  sprints.py  types.py
sprint_pulse/web/static/: calendar.js
sprint_pulse/web/templates/: base.html  config.html  member_detail.html  members.html  scheduler.html  sprint_detail.html  (+3 more)
tests/: conftest.py  test_api.py  test_config.py  test_db_path.py  test_demo.py  test_departed_members.py  test_desktop.py  test_integration.py  test_jira.py  test_member_calendar.py  test_migrate_excluded.py  test_migration.py  test_render.py  test_review_fixes.py  test_scheduler.py  test_secrets.py  test_security_jira_site.py  test_services.py  test_setup.py  test_sprint_import.py  test_sprints.py  test_time_off_service.py  test_types.py
(+35 files in other folders)
